@@ -13,6 +13,10 @@
 	- fix: i18n tags in rpm-2.5.x had wrong offset/length (#33478).
 	- fix: AIX has sizeof(uint_16) != sizeof(mode_t) verify cast needed.
 	- fix: zero length hard links unpacked incorrectly (#34211).
+	- fix: --relocate missing trailing slash (#28874,#25876).
+	- fix: --excludedoc shouldn't create empty doc dir (#14531).
+	- fix: %_netsharedpath needs to look at basenames (#26561).
+	- fix: --excludepath was broken (#24434).
 
 4.0 -> 4.0.2
 	- fix: avoid calling getpass twice as side effect of xstrdup macro
